--- a/src/strings/DataverseResources.el-GR.resx
+++ b/src/strings/DataverseResources.el-GR.resx
@@ -1,4 +1,3 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -119,118 +118,118 @@
   </resheader>
   <data name="FormulaColumns_NotSupported" xml:space="preserve">
     <value>Δεν υποστηρίζεται στις στήλες τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns for scenarios where there the full PowerApps support is not available.</comment>
   </data>
   <data name="FormulaColumns_MathFunctionBadArity" xml:space="preserve">
     <value>Μη έγκυρος αριθμός ορισμάτων για {0} τη συνάρτηση: ελήφθη {1}, αναμένεται {2}</value>
-    
+    <comment>Error Message. Used in formula columns for scenarios where an invalid number of arguments is supplied to a math function. The {0} will be the name of the function. The {1} will be the incorrect number of arguments received. The {2} will be the correct number of args expected. </comment>
   </data>
   <data name="FormulaColumns_ArgNotSupported" xml:space="preserve">
     <value>Το όρισμα {0} δεν υποστηρίζεται για τη συνάρτηση {1} στις στήλες τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns for arguments that are not supported there.  The {0} will be the name of the argument that is not supported.  The {1} will be the name of the function.</comment>
   </data>
   <data name="FormulaColumns_ArgTypeNotSupported" xml:space="preserve">
     <value>Αυτό το όρισμα δεν μπορεί να διαβιβαστεί καθώς αυτός ο τύπος στις στήλες τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns for an argument where the type is not supported. {0} is the attempted type the argument is being coerced to.</comment>
   </data>
   <data name="FormulaColumns_ArgumentTypeNotSupported" xml:space="preserve">
     <value>Αυτό το όρισμα δεν μπορεί να μεταβιβαστεί ως τύπος {0} σε στήλες τύπων.</value>
-    
+    <comment>Error Message. Used in formula columns for an argument where the type is not supported. {0} is the attempted type the argument is being coerced to.</comment>
   </data>
   <data name="FormulaColumns_LiteralArgRequired" xml:space="preserve">
     <value>Υποστηρίζεται μόνο μια κυριολεκτική τιμή για αυτό το όρισμα.</value>
-    
+    <comment>Error Message. Used in formula columns for arguments where the value supplied must be a literal value (for example, a number or a string), instead of a calculation.</comment>
   </data>
   <data name="FormulaColumns_TimeZoneConversion" xml:space="preserve">
     <value>{0} δεν μπορεί να εκτελεστεί σε αυτά τα δεδομένα εισόδου χωρίς μετατροπή ζώνης ώρας, η οποία δεν υποστηρίζεται στις στήλες τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns for scenarios where time zone conversion is needed to perform the operation. The {0} will be the name of the function.</comment>
   </data>
   <data name="FormulaColumns_IncompatibleDateTimes" xml:space="preserve">
     <value>Αυτή η λειτουργία δεν είναι δυνατό να εκτελεστεί σε τιμές που είναι διαφορετικών συμπεριφορών ημερομηνίας/ώρας.</value>
-    
+    <comment>Error Message. Used in formula columns for scenarios where values of different Date Time Behaviors are used together, which is not supported</comment>
   </data>
   <data name="FormulaColumns_DateTimeFormatNotSupported" xml:space="preserve">
     <value>Μόνο οι συμβολοσειρές μορφής σύντομης ημερομηνίας και ώρας υποστηρίζονται σε στήλες τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns for scenarios where the maker supplies an invalid format string</comment>
   </data>
   <data name="FormulaColumns_InvalidTimeUnit" xml:space="preserve">
     <value>Το {0} όρισμα είναι μια μη έγκυρη/μη υποστηριζόμενη μονάδα χρόνου για την {1} αριθμητική συνάρτηση date.</value>
-    
+    <comment>Error Message. Used in formula columns for scenarios where the maker supplies an unsupported unit of time to the DateAdd or DateDiff function. The {0} will be the name of the argument. The {1} will be the name of the function.</comment>
   </data>
   <data name="FormulaColumns_NumericFormatNotSupported" xml:space="preserve">
     <value>Τα διακριτικά μορφοποίησης ειδικά για τοπικές ρυθμίσεις, όπως "." και "," δεν υποστηρίζονται σε στήλες τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns for scenarios where the maker supplies an invalid format string</comment>
   </data>
   <data name="FormulaColumns_FunctionNotSupported" xml:space="preserve">
     <value>{0} δεν υποστηρίζεται σε στήλες τύπου, χρησιμοποιήστε {1} αντ' αυτού.</value>
-    
+    <comment>Error Message. Used in formula columns for scenarios where the maker attempts to use a function that is not supported, providing an alternate function name.  The {0} will be the name of the function that is not supported, and {1} is the name of the suggested alternate.</comment>
   </data>
   <data name="FormulaColumns_FunctionSupportDisabled" xml:space="preserve">
     <value>Το {0} δεν υποστηρίζεται σε στήλες τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns for scenarios where the maker attempts to use a function that is not supported. The {0} will be the name of the function that is not supported.</comment>
   </data>
   <data name="FormulaColumns_OperationNotSupported" xml:space="preserve">
     <value>Αυτή η λειτουργία δεν μπορεί να εκτελεστεί σε τύπο {0} σε στήλες τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns for scenarios where the maker attempts to perform an unsupported operatiom. The {0} will be the type the operation is not supported for.</comment>
   </data>
   <data name="FormulaColumns_ResultTypeNotSupported" xml:space="preserve">
     <value>Ο τύπος αποτελέσματος {0} δεν υποστηρίζεται σε στήλες τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns for a formula that returns a type which is not supported.</comment>
   </data>
   <data name="FormulaColumns_RecordAccessNotSupported" xml:space="preserve">
     <value>Η απευθείας αναφορά σε μια ολόκληρη εγγραφή δεν υποστηρίζεται στις στήλες τύπων. Παρακαλείσθε να αναφέρετε ένα έγκυρο πεδίο στην εγγραφή.</value>
-    
+    <comment>Error Message. Used in formula columns for scenarios where the maker attempts to reference an entire record instead of a specific field.</comment>
   </data>
   <data name="FormulaColumns_ResultTypeMustMatch" xml:space="preserve">
     <value>Ο τύπος αποτελέσματος για αυτόν τον τύπο αναμένεται να είναι {0}, αλλά ο πραγματικός τύπος αποτελέσματος είναι {1}. Δεν είναι δυνατή η αλλαγή του τύπου αποτελέσματος μιας στήλης τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns for a formula that returns an unexpected result type during editing. The {0} will be the name of the required type. The {1} will be the name of the incorrect type.</comment>
   </data>
   <data name="FormulaColumns_ColumnTypeNotSupported" xml:space="preserve">
     <value>Οι στήλες τύπου {0} δεν υποστηρίζονται σε στήλες τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns for a formula where the maker attempts to use a column from Dataverse that is not supported, such as floating point.</comment>
   </data>
   <data name="FormulaColumns_ColumnFormatNotSupported" xml:space="preserve">
     <value>Οι στήλες τύπου {0} με μορφή {1} δεν υποστηρίζονται σε στήλες τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns for a formula where the maker attempts to use a column from Dataverse that is of a format that not supported, such as whole number formatted as language.</comment>
   </data>
   <data name="FormulaColumns_AggregateCoercionNotSupported" xml:space="preserve">
     <value>Ο εξαναγκασμός εγγραφών ή πινάκων δεν υποστηρίζεται σε στήλες τύπων.</value>
-    
+    <comment>Error Message. Used in formula columns for a formula where the maker attempts record-record or table-table coercion.</comment>
   </data>
   <data name="FormulaColumns_SingleColumnTableNotSupported" xml:space="preserve">
     <value>Οι πίνακες μίας στήλης δεν υποστηρίζονται σε στήλες τύπων.</value>
-    
+    <comment>Error Message. Used in formula columns for a formula that references a single-column table.</comment>
   </data>
   <data name="FormulaColumns_VirtualTableNotSupported" xml:space="preserve">
     <value>Δεν είναι δυνατή η αναφορά εικονικού πίνακα {0} σε στήλες τύπων.</value>
-    
+    <comment>Error Message. Used in formula columns for a formula that references a virtual table.</comment>
   </data>
   <data name="FormulaColumns_TextNumberMissingFormat" xml:space="preserve">
     <value>Συμπεριλάβετε μια μορφή στο δεύτερο όρισμα κατά τη χρήση της συνάρτησης Text με αριθμούς. Η συμβολοσειρά μορφής δεν μπορεί να περιλαμβάνει διαχωριστικό χιλιάδων ή υποδιαστολή στις στήλες τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns for Text of a number without a format string.</comment>
   </data>
   <data name="FormulaColumns_ImplicitNumberToText" xml:space="preserve">
     <value>Χρησιμοποιήστε τη συνάρτηση Text για να μετατρέψετε αριθμούς σε κείμενο. Συμπεριλάβετε μια μορφή στο δεύτερο όρισμα, το οποίο δεν μπορεί να περιλαμβάνει διαχωριστικό χιλιάδων ή υποδιαστολή σε στήλες τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns for implicit conversion of number to text.</comment>
   </data>
   <data name="FormulaColumns_RelatedCurrency" xml:space="preserve">
     <value>Οι υπολογισμοί με στήλες νομισματικής μονάδας σε σχετικούς πίνακες δεν υποστηρίζονται αυτήν τη στιγμή σε στήλες τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns when a currency field is referenced on a related table, not currently supported.</comment>
   </data>
   <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
     <value>Η άμεση χρήση πεδίων νομισματικής μονάδας δεν υποστηρίζεται ακόμα. Χρησιμοποιήστε το στοιχείο Decimal(CurrencyField) ως λύση, αλλά λάβετε υπόψη ότι τα δεκαδικά ψηφία έχουν μικρότερο εύρος από τη νομισματική μονάδα.</value>
-    
+    <comment>Error Message. Used in formula columns for a formula that uses currency fields directly expression.</comment>
   </data>
   <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
     <value>Το Σύνολο επιλογών με όνομα {0} από σχετικούς πίνακες δεν υποστηρίζεται αυτήν τη στιγμή σε στήλες τύπου.</value>
-    
+    <comment>Error Message. Used in formula columns for a formula that uses OptionSet from related tables.</comment>
   </data>
   <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
     <value>Τα μετα-δεδομένα για το Σύνολο επιλογών με όνομα {0} δεν βρέθηκαν.</value>
-    
+    <comment>Error Message. Used in formula columns when optionset info is not found.</comment>
   </data>
   <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
     <value>Η λειτουργία δεν είναι δυνατό να εκτελεστεί σε πολλά σύνολα επιλογών. Χρησιμοποιήστε ένα μόνο σύνολο επιλογών ως τύπο αποτελέσματος.</value>
-    
+    <comment>Error Message. Used when formula columns use multiple optionsets as result.</comment>
   </data>
 </root>
